[gd_scene load_steps=6 format=3 uid="uid://c8ohtww5qtrs"]

[ext_resource type="Script" path="res://scripts/main_menu_ui.gd" id="1_w5mdj"]
[ext_resource type="Theme" uid="uid://dhgodsmrdod46" path="res://Assets/ui_themes/main_menu_UI.tres" id="2_khgka"]
[ext_resource type="AudioStream" uid="uid://btiooojjkfty" path="res://Assets/sounds/UI sounds/hover.mp3" id="4_v1fhq"]
[ext_resource type="AudioStream" uid="uid://chbnwkoqsievv" path="res://Assets/sounds/UI sounds/click.mp3" id="5_jyjyw"]

[sub_resource type="Theme" id="Theme_h3sv6"]

[node name="MainMenuUi" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_h3sv6")
script = ExtResource("1_w5mdj")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.137153
anchor_top = 0.552469
anchor_right = 0.137153
anchor_bottom = 0.75
offset_left = -0.000259399
offset_top = -80.9999
offset_right = 278.0
offset_bottom = 71.0
grow_vertical = 2
theme = ExtResource("2_khgka")

[node name="start" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "START"

[node name="options" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "OPTIONS"

[node name="quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "QUIT"

[node name="HoverAudioPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_v1fhq")
volume_db = -10.0
max_polyphony = 5

[node name="ClickAudioPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_jyjyw")
volume_db = -10.0
max_polyphony = 5

[connection signal="mouse_entered" from="VBoxContainer/start" to="." method="_on_start_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/start" to="." method="_on_start_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/options" to="." method="_on_options_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/options" to="." method="_on_options_pressed"]
[connection signal="toggled" from="VBoxContainer/options" to="." method="_on_options_toggled"]
[connection signal="mouse_entered" from="VBoxContainer/quit" to="." method="_on_quit_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/quit" to="." method="_on_quit_pressed"]
